--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5,14 +5,14 @@
 $global-link-color: #DA7D02;
 
 // 2. Import default variables and available mixins.
-@import "~uikit/src/scss/variables-theme.scss";
-@import "~uikit/src/scss/mixins-theme.scss";
+@import "uikit/src/scss/variables-theme.scss";
+@import "uikit/src/scss/mixins-theme.scss";
 
 // 3. Your custom mixin overwrites & variables.
 $inverse-global-color-mode: none;
 
 // 4. Import UIkit.
-@import "~uikit/src/scss/theme/_import.scss";
+@import "uikit/src/scss/theme/_import.scss";
 @import "import_uikit_components";
 
 // --- CUSTOM ---
